Fix 46822. Remove unnecessary object creation from StandardContext. Patch provided by Anthony Whitford.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@769331 13f79535-47bb-0310-9956-ffa450edef68