@@ -827,8 +827,8 @@ public class StandardContext
 
         boolean oldDelegate = this.delegate;
         this.delegate = delegate;
-        support.firePropertyChange("delegate", new Boolean(oldDelegate),
-                                   new Boolean(this.delegate));
+        support.firePropertyChange("delegate", oldDelegate,
+                                   this.delegate);
 
     }
 
@@ -942,8 +942,8 @@ public class StandardContext
         boolean oldAntiJARLocking = this.antiJARLocking;
         this.antiJARLocking = antiJARLocking;
         support.firePropertyChange("antiJARLocking",
-                                   new Boolean(oldAntiJARLocking),
-                                   new Boolean(this.antiJARLocking));
+                                   oldAntiJARLocking,
+                                   this.antiJARLocking);
 
     }
 
@@ -958,8 +958,8 @@ public class StandardContext
         boolean oldAntiResourceLocking = this.antiResourceLocking;
         this.antiResourceLocking = antiResourceLocking;
         support.firePropertyChange("antiResourceLocking",
-                                   new Boolean(oldAntiResourceLocking),
-                                   new Boolean(this.antiResourceLocking));
+                                   oldAntiResourceLocking,
+                                   this.antiResourceLocking);
 
     }
 
@@ -984,8 +984,8 @@ public class StandardContext
         boolean oldAvailable = this.available;
         this.available = available;
         support.firePropertyChange("available",
-                                   new Boolean(oldAvailable),
-                                   new Boolean(this.available));
+                                   oldAvailable,
+                                   this.available);
 
     }
 
@@ -1070,8 +1070,8 @@ public class StandardContext
         boolean oldConfigured = this.configured;
         this.configured = configured;
         support.firePropertyChange("configured",
-                                   new Boolean(oldConfigured),
-                                   new Boolean(this.configured));
+                                   oldConfigured,
+                                   this.configured);
 
     }
 
@@ -1096,8 +1096,8 @@ public class StandardContext
         boolean oldCookies = this.cookies;
         this.cookies = cookies;
         support.firePropertyChange("cookies",
-                                   new Boolean(oldCookies),
-                                   new Boolean(this.cookies));
+                                   oldCookies,
+                                   this.cookies);
 
     }
     
@@ -1122,8 +1122,8 @@ public class StandardContext
         boolean oldUseHttpOnly = this.useHttpOnly;
         this.useHttpOnly = useHttpOnly;
         support.firePropertyChange("useHttpOnly",
-                new Boolean(oldUseHttpOnly),
-                new Boolean(this.useHttpOnly));
+                oldUseHttpOnly,
+                this.useHttpOnly);
     }
     
     
@@ -1149,8 +1149,8 @@ public class StandardContext
         boolean oldCrossContext = this.crossContext;
         this.crossContext = crossContext;
         support.firePropertyChange("crossContext",
-                                   new Boolean(oldCrossContext),
-                                   new Boolean(this.crossContext));
+                                   oldCrossContext,
+                                   this.crossContext);
 
     }
 
@@ -1282,8 +1282,8 @@ public class StandardContext
         boolean oldDistributable = this.distributable;
         this.distributable = distributable;
         support.firePropertyChange("distributable",
-                                   new Boolean(oldDistributable),
-                                   new Boolean(this.distributable));
+                                   oldDistributable,
+                                   this.distributable);
 
         // Bugzilla 32866
         if(getManager() != null) {
@@ -1395,8 +1395,8 @@ public class StandardContext
     public void setIgnoreAnnotations(boolean ignoreAnnotations) {
         boolean oldIgnoreAnnotations = this.ignoreAnnotations;
         this.ignoreAnnotations = ignoreAnnotations;
-        support.firePropertyChange("ignoreAnnotations", Boolean.valueOf(oldIgnoreAnnotations),
-                Boolean.valueOf(this.ignoreAnnotations));
+        support.firePropertyChange("ignoreAnnotations", oldIgnoreAnnotations,
+                this.ignoreAnnotations);
     }
     
     
@@ -1630,8 +1630,8 @@ public class StandardContext
         boolean oldPrivileged = this.privileged;
         this.privileged = privileged;
         support.firePropertyChange("privileged",
-                                   new Boolean(oldPrivileged),
-                                   new Boolean(this.privileged));
+                                   oldPrivileged,
+                                   this.privileged);
 
     }
 
@@ -1646,8 +1646,8 @@ public class StandardContext
         boolean oldReloadable = this.reloadable;
         this.reloadable = reloadable;
         support.firePropertyChange("reloadable",
-                                   new Boolean(oldReloadable),
-                                   new Boolean(this.reloadable));
+                                   oldReloadable,
+                                   this.reloadable);
 
     }
 
@@ -1662,8 +1662,8 @@ public class StandardContext
         boolean oldOverride = this.override;
         this.override = override;
         support.firePropertyChange("override",
-                                   new Boolean(oldOverride),
-                                   new Boolean(this.override));
+                                   oldOverride,
+                                   this.override);
 
     }
 
@@ -1688,8 +1688,8 @@ public class StandardContext
         boolean oldReplaceWelcomeFiles = this.replaceWelcomeFiles;
         this.replaceWelcomeFiles = replaceWelcomeFiles;
         support.firePropertyChange("replaceWelcomeFiles",
-                                   new Boolean(oldReplaceWelcomeFiles),
-                                   new Boolean(this.replaceWelcomeFiles));
+                                   oldReplaceWelcomeFiles,
+                                   this.replaceWelcomeFiles);
 
     }
 
@@ -1736,8 +1736,8 @@ public class StandardContext
          */
         this.sessionTimeout = (timeout == 0) ? -1 : timeout;
         support.firePropertyChange("sessionTimeout",
-                                   new Integer(oldSessionTimeout),
-                                   new Integer(this.sessionTimeout));
+                                   oldSessionTimeout,
+                                   this.sessionTimeout);
 
     }
 
@@ -1764,8 +1764,8 @@ public class StandardContext
         boolean oldSwallowOutput = this.swallowOutput;
         this.swallowOutput = swallowOutput;
         support.firePropertyChange("swallowOutput",
-                                   new Boolean(oldSwallowOutput),
-                                   new Boolean(this.swallowOutput));
+                                   oldSwallowOutput,
+                                   this.swallowOutput);
 
     }
 
@@ -1793,8 +1793,8 @@ public class StandardContext
         long oldUnloadDelay = this.unloadDelay;
         this.unloadDelay = unloadDelay;
         support.firePropertyChange("unloadDelay",
-                                   new Long(oldUnloadDelay),
-                                   new Long(this.unloadDelay));
+                                   Long.valueOf(oldUnloadDelay),
+                                   Long.valueOf(this.unloadDelay));
 
     }
 
@@ -2172,7 +2172,7 @@ public class StandardContext
                 if (errorPage.getErrorCode() == 200) {
                     this.okErrorPage = errorPage;
                 }
-                statusPages.put(new Integer(errorPage.getErrorCode()),
+                statusPages.put(Integer.valueOf(errorPage.getErrorCode()),
                                 errorPage);
             }
         }
@@ -3317,7 +3317,7 @@ public class StandardContext
                 if (errorPage.getErrorCode() == 200) {
                     this.okErrorPage = null;
                 }
-                statusPages.remove(new Integer(errorPage.getErrorCode()));
+                statusPages.remove(Integer.valueOf(errorPage.getErrorCode()));
             }
         }
         fireContainerEvent("removeErrorPage", errorPage);
@@ -4092,7 +4092,7 @@ public class StandardContext
             int loadOnStartup = wrapper.getLoadOnStartup();
             if (loadOnStartup < 0)
                 continue;
-            Integer key = new Integer(loadOnStartup);
+            Integer key = Integer.valueOf(loadOnStartup);
             ArrayList list = (ArrayList) map.get(key);
             if (list == null) {
                 list = new ArrayList();
